# KinectBody2Yarp

./: .gitignore  Body  Body.h  CMakeLists.txt  FindKinectSDK20.cmake  FloorPlane.h  FloorPlane.msg  JointROSmsg.h  JointROSmsg.msg  KinectBody2Yarp.cpp  KinectTrackedPeopleMessage.h  KinectTrackedPeopleMessage.msg  README.md  TickTime.h  geometry_msgs_Point.h  geometry_msgs_Pose.h  geometry_msgs_Quaternion.h  std_msgs_Header.h  stdafx.cpp
